force-app/main/default/objects/MUSW__Master_Valuation_List__c/MUSW__Master_Valuation_List__c.object-meta.xml
<CustomObject>
    <label>Building Valuation</label>
    <nameField>
        <label>Building Valuation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Building Valuations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>