force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/Avo_Active__c.field-meta.xml
<CustomField>
    <fullName>Avo_Active__c</fullName>
    <formula>IF( AND(MUSW__Effective_Start_Date__c&lt;NOW(),
       (OR(ISBLANK(MUSW__Effective_End_Date__c),
	       MUSW__Effective_End_Date__c&gt; NOW())
		) 
		),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>