force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/Code_Book__c.field-meta.xml
<CustomField>
    <fullName>Code_Book__c</fullName>
    <label>Code Book</label>
    <length>80</length>
    <type>Text</type>
</CustomField>