force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/Code_Edition__c.field-meta.xml
<CustomField>
    <fullName>Code_Edition__c</fullName>
    <label>Code Edition</label>
    <length>8</length>
    <type>Text</type>
</CustomField>