force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/IA__c.field-meta.xml
<CustomField>
    <fullName>IA__c</fullName>
    <label>IA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>