force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/IB__c.field-meta.xml
<CustomField>
    <fullName>IB__c</fullName>
    <label>IB</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>