force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/IIA__c.field-meta.xml
<CustomField>
    <fullName>IIA__c</fullName>
    <label>IIA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>