force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/IIB__c.field-meta.xml
<CustomField>
    <fullName>IIB__c</fullName>
    <label>IIB</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>