force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/IIIA__c.field-meta.xml
<CustomField>
    <fullName>IIIA__c</fullName>
    <label>IIIA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>