force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/IIIB__c.field-meta.xml
<CustomField>
    <fullName>IIIB__c</fullName>
    <label>IIIB</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>