force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/IV__c.field-meta.xml
<CustomField>
    <fullName>IV__c</fullName>
    <label>IV</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>