force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/MUSW__Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Construction_Type__c</fullName>
    <label>Construction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MUSW__Construction_Types</valueSetName>
    </valueSet>
</CustomField>