force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/MUSW__Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>MUSW__Effective_End_Date__c</fullName>
    <label>Effective End Date</label>
    <type>DateTime</type>
</CustomField>