force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/Use_Group__c.field-meta.xml
<CustomField>
    <fullName>Use_Group__c</fullName>
    <label>Use Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A-1 Assembly, theaters, without stage</fullName>
                <default>true</default>
                <label>A-1 Assembly, theaters, without stage</label>
            </value>
            <value>
                <fullName>A-1 Assembly, theaters, with stage</fullName>
            </value>
            <value>
                <fullName>A-2 Assembly, nightclubs</fullName>
            </value>
            <value>
                <fullName>A-2 Assembly, restaurants, bars, banquet halls</fullName>
            </value>
            <value>
                <fullName>A-3 Assembly, churches</fullName>
            </value>
            <value>
                <fullName>A-3 Assembly, general, community halls, libraries, museums</fullName>
            </value>
            <value>
                <fullName>A-4 Assembly, arenas</fullName>
            </value>
            <value>
                <fullName>B Business</fullName>
            </value>
            <value>
                <fullName>E Educational</fullName>
            </value>
            <value>
                <fullName>F-1 Factory and industrial, moderate hazard</fullName>
            </value>
            <value>
                <fullName>F-2 Factory and industrial, low hazard</fullName>
            </value>
            <value>
                <fullName>H-1 High Hazard, explosives</fullName>
            </value>
            <value>
                <fullName>H234 High Hazard</fullName>
            </value>
            <value>
                <fullName>H-5 HPM</fullName>
            </value>
            <value>
                <fullName>I-1 Institutional, supervised environment</fullName>
            </value>
            <value>
                <fullName>I-2 Institutional, hospitals</fullName>
            </value>
            <value>
                <fullName>I-2 Institutional, nursing homes</fullName>
            </value>
            <value>
                <fullName>I-3 Institutional, restrained</fullName>
            </value>
            <value>
                <fullName>I-4 Institutional, day care facilities</fullName>
            </value>
            <value>
                <fullName>M Mercantile</fullName>
            </value>
            <value>
                <fullName>R-1 Residential, hotels</fullName>
            </value>
            <value>
                <fullName>R-2 Residential, multiple family</fullName>
            </value>
            <value>
                <fullName>R-3 Residential, one- and two-family</fullName>
            </value>
            <value>
                <fullName>R-4 Residential, care/assisted living facilities</fullName>
            </value>
            <value>
                <fullName>S-1 Storage, moderate hazard</fullName>
            </value>
            <value>
                <fullName>S-2 Storage, low hazard</fullName>
            </value>
            <value>
                <fullName>U Utility, miscellaneous</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>