force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/VA__c.field-meta.xml
<CustomField>
    <fullName>VA__c</fullName>
    <label>VA</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>