force-app/main/default/objects/MUSW__Master_Valuation_List__c/fields/VB__c.field-meta.xml
<CustomField>
    <fullName>VB__c</fullName>
    <label>VB</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>