force-app/main/default/objects/MUSW__Master_Valuation_List__c/validationRules/MUSW__End_Date_Must_Not_Precede_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__End_Date_Must_Not_Precede_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>MUSW__Effective_End_Date__c &lt;=  MUSW__Effective_Start_Date__c</errorConditionFormula>
    <errorDisplayField>MUSW__Effective_End_Date__c</errorDisplayField>
    <errorMessage>Effective End Date must be later than the Effective Start Date.</errorMessage>
</ValidationRule>