force-app/main/default/objects/MUSW__Master_Valuation_List__c/validationRules/MUSW__Require_Effective_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>MUSW__Require_Effective_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( MUSW__Effective_Start_Date__c )</errorConditionFormula>
    <errorDisplayField>MUSW__Effective_Start_Date__c</errorDisplayField>
    <errorMessage>Effective Start Date is Required.</errorMessage>
</ValidationRule>