force-app/main/default/objects/MUSW__Master_Valuation_List__c/listViews/MUSW__All.listView-meta.xml
<ListView>
    <fullName>MUSW__All</fullName>
    <columns>NAME</columns>
    <columns>Code_Book__c</columns>
    <columns>Code_Edition__c</columns>
    <columns>IA__c</columns>
    <columns>IB__c</columns>
    <columns>IIA__c</columns>
    <columns>IIB__c</columns>
    <columns>IIIA__c</columns>
    <columns>IIIB__c</columns>
    <columns>IV__c</columns>
    <columns>Use_Group__c</columns>
    <columns>VA__c</columns>
    <columns>VB__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>